deploy: 93557232894aed4a5ce89177fefe8304ae9141e6

--- a/ch12-00-an-io-project.html
+++ b/ch12-00-an-io-project.html
@@ -176,7 +176,7 @@
 <ul>
 <li>組織程式碼（使用你在<a href="ch07-00-managing-growing-projects-with-packages-crates-and-modules.html">第七章</a><!--   ignore -->所學的模組）</li>
 <li>使用向量與字串（<a href="ch08-00-common-collections.html">第八章</a><!-- ignore -->的集合）</li>
-<li>錯誤處理（<a href="ch09-00-error-handling.html">Chapter 9</a><!-- ignore -->）</li>
+<li>錯誤處理（<a href="ch09-00-error-handling.html">第九章</a><!-- ignore -->）</li>
 <li>合理的使用特徵與生命週期（<a href="ch10-00-generics.html">第十章</a><!-- ignore -->）</li>
 <li>測試（<a href="ch11-00-testing.html">第十一章</a><!-- ignore -->）</li>
 </ul>
