--- a/ch12-04-testing-the-librarys-functionality.html
+++ b/ch12-04-testing-the-librarys-functionality.html
@@ -192,7 +192,7 @@
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
@@ -241,7 +241,7 @@ Pick three.&quot;;
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
@@ -352,7 +352,7 @@ error: test failed, to rerun pass '--lib'
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
@@ -407,7 +407,7 @@ error: test failed, to rerun pass '--lib'
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
@@ -462,7 +462,7 @@ error: test failed, to rerun pass '--lib'
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
@@ -547,7 +547,7 @@ test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </span><span class="boring">impl Config {
 </span><span class="boring">    pub fn new(args: &amp;[String]) -&gt; Result&lt;Config, &amp;'static str&gt; {
 </span><span class="boring">        if args.len() &lt; 3 {
-</span><span class="boring">            return Err(&quot;not enough arguments&quot;);
+</span><span class="boring">            return Err(&quot;引數不足&quot;);
 </span><span class="boring">        }
 </span><span class="boring">
 </span><span class="boring">        let query = args[1].clone();
