deploy: fcbc73b81f281bd210c4bc81b1719f0085ec9244

--- a/ch13-00-functional-features.html
+++ b/ch13-00-functional-features.html
@@ -177,7 +177,7 @@
 <li>如何用這兩種功能來改善第十二章的 I/O 專案</li>
 <li>這兩個功能的效能（先偷偷跟你說：它們比你想像的還要快！）</li>
 </ul>
-<p>其他 Rust 已經在其他章節提到的功能像是模式配對與枚舉也都有備函式風格所影響。掌握閉包與疊代器是寫出符合語言風格與高效 Rust 程式碼中重要的一環，所以我們將用一章來介紹它們。</p>
+<p>其他 Rust 已經在其他章節提到的功能像是模式配對與枚舉也都有被函式風格所影響。掌握閉包與疊代器是寫出符合語言風格與高效 Rust 程式碼中重要的一環，所以我們將用一章來介紹它們。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
