--- a/ch16-02-message-passing.html
+++ b/ch16-02-message-passing.html
@@ -214,7 +214,7 @@ fn main() {
     });
 
     let received = rx.recv().unwrap();
-    println!(&quot;Got: {}&quot;, received);
+    println!(&quot;取得：{}&quot;, received);
 }
 </code></pre></pre>
 <p><span class="caption">範例 16-8：在主執行緒取得數值「hi」並顯示出來</span></p>
@@ -225,7 +225,7 @@ fn main() {
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">Got: hi
+<pre><code class="language-text">取得：hi
 </code></pre>
 <p>太棒了！</p>
 <h3><a class="header" href="#通道與所有權轉移" id="通道與所有權轉移">通道與所有權轉移</a></h3>
@@ -244,7 +244,7 @@ fn main() {
     });
 
     let received = rx.recv().unwrap();
-    println!(&quot;Got: {}&quot;, received);
+    println!(&quot;取得：{}&quot;, received);
 }
 </code></pre>
 <p><span class="caption">範例 16-9：在我們將 <code>val</code> 傳入通道後嘗試使用其值</span></p>
@@ -294,7 +294,7 @@ fn main() {
     });
 
     for received in rx {
-        println!(&quot;Got: {}&quot;, received);
+        println!(&quot;取得：{}&quot;, received);
     }
 }
 </code></pre></pre>
@@ -305,10 +305,10 @@ fn main() {
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">Got: hi
-Got: from
-Got: the
-Got: thread
+<pre><code class="language-text">取得：hi
+取得：from
+取得：the
+取得：thread
 </code></pre>
 <p>因爲我們在主執行緒中的 <code>for</code> 迴圈內沒有任何會暫停或延遲的程式碼，所以我們可以看出主執行緒是在等待產生的執行緒傳送的數值。</p>
 <h3><a class="header" href="#透過克隆發送者來建立多重生產者creating-multiple-producers-by-cloning-the-transmitter" id="透過克隆發送者來建立多重生產者creating-multiple-producers-by-cloning-the-transmitter">透過克隆發送者來建立多重生產者Creating Multiple Producers by Cloning the Transmitter</a></h3>
@@ -353,7 +353,7 @@ Got: thread
     });
 
     for received in rx {
-        println!(&quot;Got: {}&quot;, received);
+        println!(&quot;取得：{}&quot;, received);
     }
 
     // --省略--
@@ -365,14 +365,14 @@ Got: thread
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">Got: hi
-Got: more
-Got: from
-Got: messages
-Got: for
-Got: the
-Got: thread
-Got: you
+<pre><code class="language-text">取得：hi
+取得：more
+取得：from
+取得：messages
+取得：for
+取得：the
+取得：thread
+取得：you
 </code></pre>
 <p>你可能會看到數值以不同順序排序，這完全依據你的系統來決定。這正是並行程式設計既有趣卻又困難。如果你加上 <code>thread::sleep</code> 來實驗，並在不同執行緒給予不同數值的話，就會發現每一輪都會更不確定，每次都會產生不同的輸出結果。</p>
 <p>現在我們已經看完通道如何運作，接著讓我們來看看並行的不同方法吧。</p>
