--- a/ch13-01-closures.html
+++ b/ch13-01-closures.html
@@ -168,17 +168,17 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#函式語言功能疊代器與閉包" id="函式語言功能疊代器與閉包">函式語言功能：疊代器與閉包</a></h2>
-<p>Rust 的閉包（closures）是個你能賦值給變數或作爲其他函式引數的匿名函式。你可以在某處建立閉包，然後在不同的地方呼叫閉包還執行它。而且不像函式，閉包可以從它們所定義的作用域中獲取數值。我們講會解釋這些閉包功能如何允許程式碼重用以及自訂行爲。</p>
+<p>Rust 的閉包（closures）是個你能賦值給變數或作爲其他函式引數的匿名函式。你可以在某處建立閉包，然後在不同的地方呼叫閉包並執行它。而且不像函式，閉包可以從它們所定義的作用域中獲取數值。我們講會解釋這些閉包功能如何允許程式碼重用以及自訂行爲。</p>
 <h3><a class="header" href="#透過閉包建立抽象行爲" id="透過閉包建立抽象行爲">透過閉包建立抽象行爲</a></h3>
 <p>讓我們處理一個範例是當儲存閉包並在之後才執行是很實況的情況。在過程中，我們會討論到閉包語法、型別推導以及特徵。</p>
 <p>讓我們考慮以下假設情境：我們在一家新創公司上班並正在推出一支會產生自訂重訓方案的應用程式。其後端就是用 Rust 寫的，且產生重訓方案的演算法有很多因素要考量，像是使用者的年齡、身高體重指數、健身喜好、最近鍛鍊的項目以及他們指定的重訓強度。此例中實際使用的演算法並不重要，重要的是此運算會花費數秒鐘。我們只想要在我們需要時呼叫此演算法並只會呼叫一次，讓使用者不會等待太久。</p>
-<p>我們會模擬這個假設的演算法爲函式 <code>simulated_expensive_calculation</code>，如範例 13-1 所示，他會印出 <code>calculating slowly...</code>、等待兩秒鐘，然後回傳我們傳入的數值。</p>
+<p>我們會模擬這個假設的演算法爲函式 <code>simulated_expensive_calculation</code>，如範例 13-1 所示，他會印出 <code>緩慢計算中...</code>、等待兩秒鐘，然後回傳我們傳入的數值。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">use std::thread;
 use std::time::Duration;
 
 fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
-    println!(&quot;calculating slowly...&quot;);
+    println!(&quot;緩慢計算中...&quot;);
     thread::sleep(Duration::from_secs(2));
     intensity
 }
@@ -186,7 +186,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
 <p><span class="caption">範例 13-1：一支作爲假想需要運算 2 秒鐘的函式</span></p>
-<p>接下來 <code>main</code> 函式會包含此健身應用程式中最重要的部分。此函式代表當使用者請求健身方案時應用程式會呼叫的程式碼。由於應用程式的前端與我們的閉包使用並沒有任何關聯，我們將會用寫死的數值來代表我們程式得輸入並印出輸出結果。</p>
+<p>接下來 <code>main</code> 函式會包含此健身應用程式中最重要的部分。此函式代表當使用者請求健身方案時應用程式會呼叫的程式碼。由於應用程式的前端與我們的閉包使用並沒有任何關聯，我們將會用寫死的數值來代表我們程式的輸入並印出輸出結果。</p>
 <p>必要的輸入如以下所示：</p>
 <ul>
 <li>使用者想要的重訓強度，用來指明他們想要的訓練是低強度訓練或是高強度訓練</li>
@@ -198,7 +198,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
 </span><span class="boring">fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
-</span><span class="boring">    println!(&quot;calculating slowly...&quot;);
+</span><span class="boring">    println!(&quot;緩慢計算中...&quot;);
 </span><span class="boring">    thread::sleep(Duration::from_secs(2));
 </span><span class="boring">    intensity
 </span><span class="boring">}
@@ -220,7 +220,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
 </span><span class="boring">fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
-</span><span class="boring">    println!(&quot;calculating slowly...&quot;);
+</span><span class="boring">    println!(&quot;緩慢計算中...&quot;);
 </span><span class="boring">    thread::sleep(Duration::from_secs(2));
 </span><span class="boring">    intensity
 </span><span class="boring">}
@@ -228,19 +228,19 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span>fn generate_workout(intensity: u32, random_number: u32) {
     if intensity &lt; 25 {
         println!(
-            &quot;Today, do {} pushups!&quot;,
+            &quot;今天請做 {} 下伏地挺身！&quot;,
             simulated_expensive_calculation(intensity)
         );
         println!(
-            &quot;Next, do {} situps!&quot;,
+            &quot;然後請做 {} 下仰臥起坐！&quot;,
             simulated_expensive_calculation(intensity)
         );
     } else {
         if random_number == 3 {
-            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+            println!(&quot;今天休息！別忘了多喝水！&quot;);
         } else {
             println!(
-                &quot;Today, run for {} minutes!&quot;,
+                &quot;今天請慢跑 {} 分鐘！&quot;,
                 simulated_expensive_calculation(intensity)
             );
         }
@@ -255,11 +255,11 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 13-3：依據輸入印出重訓方案並呼叫函式 <code>simulated_expensive_calculation</code> 的業務邏輯</span></p>
-<p>範例 13-3 的程式碼會多次呼叫計算緩慢的函式。第一個 <code>if</code> 區塊會呼叫 <code>simulated_expensive_calculation</code> 兩四，然後在 <code>else</code> 區塊內的 <code>if</code> 不會呼叫它，然後第二個 <code>else</code> 會呼叫它一次。</p>
-<p><code>generate_workout</code> 函式預期的行爲是先檢查使用者想要低強度的重夐方案（也就是強度低於 25）或者高強度的方案（大於等於 25）。</p>
+<p>範例 13-3 的程式碼會多次呼叫計算緩慢的函式。第一個 <code>if</code> 區塊會呼叫 <code>simulated_expensive_calculation</code> 兩次，然後在 <code>else</code> 區塊內的 <code>if</code> 不會呼叫它，然後第二個 <code>else</code> 會呼叫它一次。</p>
+<p><code>generate_workout</code> 函式預期的行爲是先檢查使用者想要低強度的重訓方案（也就是強度低於 25）或者高強度的方案（大於等於 25）。</p>
 <p>低強度重訓方案會依據我們麼體的複雜演算法來建議一些伏地挺身和仰臥起坐。</p>
 <p>如果使用者想要高強度重用，就會有額外的邏輯：如果應用程式產生的隨機數字是 3 的話，應用程式會建議休息並多喝水；如果不是的話，使用者會依據複雜演算法得到數分鐘的跑步訓練。</p>
-<p>此程式碼能夠應付業務邏輯了，但是假設未來資料科學團隊決定要求我們需要更改我們呼叫 <code>simulated_expensive_calculation</code> 函式的方式。爲了簡化這些更新步驟，我們想要重構此程式碼好讓 <code>simulated_expensive_calculation</code> 只會呼叫一次。同時我們也想要去掉我們目前呼叫兩次的多餘程式碼，我們不希望再對此程序加上更多的函式呼叫。也就是說，我們不希望在沒有需要取得結果實呼叫程式碼，且我們希望它只會被呼叫一次。</p>
+<p>此程式碼能夠應付業務邏輯了，但是假設未來資料科學團隊決定要求我們需要更改我們呼叫 <code>simulated_expensive_calculation</code> 函式的方式。爲了簡化這些更新步驟，我們想要重構此程式碼好讓 <code>simulated_expensive_calculation</code> 只會呼叫一次。同時我們也想要去掉我們目前呼叫兩次的多餘程式碼，我們不希望再對此程序加上更多的函式呼叫。也就是說，我們不希望在沒有需要取得結果時呼叫程式碼，且我們希望它只會被呼叫一次。</p>
 <h4><a class="header" href="#透過函式重構" id="透過函式重構">透過函式重構</a></h4>
 <p>我們可以用許多方式重構此重訓程式。首先我們先將重複呼叫 <code>simulated_expensive_calculation</code> 的地方改成變數，如範例 13-4 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -267,7 +267,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
 </span><span class="boring">fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
-</span><span class="boring">    println!(&quot;calculating slowly...&quot;);
+</span><span class="boring">    println!(&quot;緩慢計算中...&quot;);
 </span><span class="boring">    thread::sleep(Duration::from_secs(2));
 </span><span class="boring">    intensity
 </span><span class="boring">}
@@ -276,13 +276,13 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
     let expensive_result = simulated_expensive_calculation(intensity);
 
     if intensity &lt; 25 {
-        println!(&quot;Today, do {} pushups!&quot;, expensive_result);
-        println!(&quot;Next, do {} situps!&quot;, expensive_result);
+        println!(&quot;今天請做 {} 下伏地挺身！&quot;, expensive_result);
+        println!(&quot;然後請做 {} 下仰臥起坐！&quot;, expensive_result);
     } else {
         if random_number == 3 {
-            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+            println!(&quot;今天休息！別忘了多喝水！&quot;);
         } else {
-            println!(&quot;Today, run for {} minutes!&quot;, expensive_result);
+            println!(&quot;今天請慢跑 {} 分鐘！&quot;, expensive_result);
         }
     }
 }
@@ -305,20 +305,20 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">
 </span><span class="boring">fn generate_workout(intensity: u32, random_number: u32) {
 </span>    let expensive_closure = |num| {
-        println!(&quot;calculating slowly...&quot;);
+        println!(&quot;緩慢計算中...&quot;);
         thread::sleep(Duration::from_secs(2));
         num
     };
 <span class="boring">
 </span><span class="boring">    if intensity &lt; 25 {
-</span><span class="boring">        println!(&quot;Today, do {} pushups!&quot;, expensive_closure(intensity));
-</span><span class="boring">        println!(&quot;Next, do {} situps!&quot;, expensive_closure(intensity));
+</span><span class="boring">        println!(&quot;今天請做 {} 下伏地挺身！&quot;, expensive_closure(intensity));
+</span><span class="boring">        println!(&quot;然後請做 {} 下仰臥起坐！&quot;, expensive_closure(intensity));
 </span><span class="boring">    } else {
 </span><span class="boring">        if random_number == 3 {
-</span><span class="boring">            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+</span><span class="boring">            println!(&quot;今天休息！別忘了多喝水！&quot;);
 </span><span class="boring">        } else {
 </span><span class="boring">            println!(
-</span><span class="boring">                &quot;Today, run for {} minutes!&quot;,
+</span><span class="boring">                &quot;今天請慢跑 {} 分鐘！&quot;,
 </span><span class="boring">                expensive_closure(intensity)
 </span><span class="boring">            );
 </span><span class="boring">        }
@@ -333,7 +333,7 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 13-5：定義閉包並存入 <code>expensive_closure</code> 變數中</span></p>
-<p>閉包定義位於 <code>expensive_closure</code> 賦值時 <code>=</code> 後面的部分。要定義閉包，我們先從一對直線（<code>|</code>）開始，其內我們會指定閉包的參數，選擇此語法的原因是因爲這與 Smalltalk 和 Ruby 的閉包閉包定義類似。此閉包有一個參數 <code>num</code>，如果我們想要不止一個的話，我們可以用逗號來分隔，像是這樣 <code>|param1, param2|</code>。</p>
+<p>閉包定義位於 <code>expensive_closure</code> 賦值時 <code>=</code> 後面的部分。要定義閉包，我們先從一對直線（<code>|</code>）開始，其內我們會指定閉包的參數，選擇此語法的原因是因爲這與 Smalltalk 和 Ruby 的閉包定義類似。此閉包有一個參數 <code>num</code>，如果我們想要不止一個的話，我們可以用逗號來分隔，像是這樣 <code>|param1, param2|</code>。</p>
 <p>在參數之後，我們加上大括號來作爲閉包的本體，不過如果閉包本體只是一個表達式的話就不必這樣寫。在閉包結束後，也就是大括號之後，我們要加上分號才能完成 <code>let</code> 陳述式的動作。在閉包本體最後一行的回傳數值就會是當閉包被呼叫時的回傳數值，因爲該行沒有以分號做結尾，就像函式本體一樣。</p>
 <p>注意到此 <code>let</code> 陳述式代表 <code>expensive_closure</code> 包含了匿名函式的<em>定義</em>，而不是呼叫匿名函式的<em>回傳數值</em>。回想一下我們使用閉包是爲了讓我們能在某處定義程式碼、儲存這段程式碼然後在之後別的地方呼叫它。我們想呼叫的程式碼現在儲存在 <code>expensive_closure</code> 中。</p>
 <p>有了閉包定義，我們就可以變更 <code>if</code> 區塊內的程式碼呼叫閉包來執行其程式碼並取得結果數值。我們呼叫閉包的方式與呼叫函式一樣：我們指定握有閉包定義的變數名稱，然後在括號內加上我們想使用的引數數值，如範例 13-6 所示：</p>
@@ -343,20 +343,20 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">
 </span>fn generate_workout(intensity: u32, random_number: u32) {
     let expensive_closure = |num| {
-        println!(&quot;calculating slowly...&quot;);
+        println!(&quot;緩慢計算中...&quot;);
         thread::sleep(Duration::from_secs(2));
         num
     };
 
     if intensity &lt; 25 {
-        println!(&quot;Today, do {} pushups!&quot;, expensive_closure(intensity));
-        println!(&quot;Next, do {} situps!&quot;, expensive_closure(intensity));
+        println!(&quot;今天請做 {} 下伏地挺身！&quot;, expensive_closure(intensity));
+        println!(&quot;然後請做 {} 下仰臥起坐！&quot;, expensive_closure(intensity));
     } else {
         if random_number == 3 {
-            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+            println!(&quot;今天休息！別忘了多喝水！&quot;);
         } else {
             println!(
-                &quot;Today, run for {} minutes!&quot;,
+                &quot;今天請慢跑 {} 分鐘！&quot;,
                 expensive_closure(intensity)
             );
         }
@@ -384,20 +384,20 @@ fn simulated_expensive_calculation(intensity: u32) -&gt; u32 {
 </span><span class="boring">
 </span><span class="boring">fn generate_workout(intensity: u32, random_number: u32) {
 </span>    let expensive_closure = |num: u32| -&gt; u32 {
-        println!(&quot;calculating slowly...&quot;);
+        println!(&quot;緩慢計算中...&quot;);
         thread::sleep(Duration::from_secs(2));
         num
     };
 <span class="boring">
 </span><span class="boring">    if intensity &lt; 25 {
-</span><span class="boring">        println!(&quot;Today, do {} pushups!&quot;, expensive_closure(intensity));
-</span><span class="boring">        println!(&quot;Next, do {} situps!&quot;, expensive_closure(intensity));
+</span><span class="boring">        println!(&quot;今天請做 {} 下伏地挺身！&quot;, expensive_closure(intensity));
+</span><span class="boring">        println!(&quot;然後請做 {} 下仰臥起坐！&quot;, expensive_closure(intensity));
 </span><span class="boring">    } else {
 </span><span class="boring">        if random_number == 3 {
-</span><span class="boring">            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+</span><span class="boring">            println!(&quot;今天休息！別忘了多喝水！&quot;);
 </span><span class="boring">        } else {
 </span><span class="boring">            println!(
-</span><span class="boring">                &quot;Today, run for {} minutes!&quot;,
+</span><span class="boring">                &quot;今天請慢跑 {} 分鐘！&quot;,
 </span><span class="boring">                expensive_closure(intensity)
 </span><span class="boring">            );
 </span><span class="boring">        }
@@ -472,7 +472,7 @@ where
 <blockquote>
 <p>注意：函式也會實作這三個 <code>Fn</code> 特徵。如果我們想做的事情不需要獲取環境數值，我們可以使用實現 <code>Fn</code> 特徵的函式而非閉包。</p>
 </blockquote>
-<p><code>value</code> 欄位型別爲 <code>Option&lt;u32&gt;</code>。在我們執行閉包前，<code>value</code> 會是 <code>None</code>。當有程式碼使用 <code>Cacher</code> 要求取得閉包<em>結果</em>時，<code>Cacher</code> 就會在那時候執行閉包並以 <code>Some</code> 變體儲存結果到 <code>value</code> 欄位。然後如果有程式碼再次要求閉包結果實，我們就不必再執行閉包一次，可以靠 <code>Cacher</code> 回傳 <code>Some</code> 變體內的結果。</p>
+<p><code>value</code> 欄位型別爲 <code>Option&lt;u32&gt;</code>。在我們執行閉包前，<code>value</code> 會是 <code>None</code>。當有程式碼使用 <code>Cacher</code> 要求取得閉包<em>結果</em>時，<code>Cacher</code> 就會在那時候執行閉包並以 <code>Some</code> 變體儲存結果到 <code>value</code> 欄位。然後如果有程式碼再次要求閉包結果時，我們就不必再執行閉包一次，可以靠 <code>Cacher</code> 回傳 <code>Some</code> 變體內的結果。</p>
 <p>我們討論這個有關 <code>value</code> 欄位的邏輯定義就如範例 13-10 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">struct Cacher&lt;T&gt;
@@ -551,20 +551,20 @@ where
 </span><span class="boring">
 </span>fn generate_workout(intensity: u32, random_number: u32) {
     let mut expensive_result = Cacher::new(|num| {
-        println!(&quot;calculating slowly...&quot;);
+        println!(&quot;緩慢計算中...&quot;);
         thread::sleep(Duration::from_secs(2));
         num
     });
 
     if intensity &lt; 25 {
-        println!(&quot;Today, do {} pushups!&quot;, expensive_result.value(intensity));
-        println!(&quot;Next, do {} situps!&quot;, expensive_result.value(intensity));
+        println!(&quot;今天請做 {} 下伏地挺身！&quot;, expensive_result.value(intensity));
+        println!(&quot;然後請做 {} 下仰臥起坐！&quot;, expensive_result.value(intensity));
     } else {
         if random_number == 3 {
-            println!(&quot;Take a break today! Remember to stay hydrated!&quot;);
+            println!(&quot;今天休息！別忘了多喝水！&quot;);
         } else {
             println!(
-                &quot;Today, run for {} minutes!&quot;,
+                &quot;今天請慢跑 {} 分鐘！&quot;,
                 expensive_result.value(intensity)
             );
         }
@@ -580,7 +580,7 @@ where
 </span></code></pre></pre>
 <p><span class="caption">範例 13-11：在函式 <code>generate_workout</code> 使用 <code>Cacher</code> 來抽象化快取邏輯</span></p>
 <p>不同於將閉包儲存給變數，我們建立一個新的 <code>Cacher</code> 實例來儲存閉包。然後在每個我們需要結果的地方，我們呼叫 <code>Cacher</code> 實例的 <code>value</code> 方法。我們要呼叫 <code>value</code> 方法幾次都行，或者不叫也行，無論如何耗時計算最多就只會被執行一次。</p>
-<p>請嘗試從範例 13-2 的 <code>main</code> 函式執行此程式。變更 <code>simulated_user_specified_value</code> 與 <code>simulated_random_number</code> 的數值來驗證看看在所有情況下與數個 <code>if</code> 和 <code>else</code> 區塊中，<code>calculating slowly...</code> 只會出現一次且只有在需要時才會出現。<code>Cacher</code> 負責確保我們不會呼叫超過耗時計算所需的邏輯，讓 <code>generate_workout</code> 可以專注在業務邏輯。</p>
+<p>請嘗試從範例 13-2 的 <code>main</code> 函式執行此程式。變更 <code>simulated_user_specified_value</code> 與 <code>simulated_random_number</code> 的數值來驗證看看在所有情況下與數個 <code>if</code> 和 <code>else</code> 區塊中，<code>緩慢計算中...</code> 只會出現一次且只有在需要時才會出現。<code>Cacher</code> 負責確保我們不會呼叫超過耗時計算所需的邏輯，讓 <code>generate_workout</code> 可以專注在業務邏輯。</p>
 <h3><a class="header" href="#cacher-實作的限制" id="cacher-實作的限制"><code>Cacher</code> 實作的限制</a></h3>
 <p>快取數值是個廣泛實用的行爲，我們可能會希望在程式碼中的其他不同閉包也使用到。然而目前<code>Cacher</code> 的實作有兩個問題可能會在不同場合重複使用變得有點困難。</p>
 <p>第一個問題是 <code>Cacher</code> 實例假設它永遠會從方法 <code>value</code> 的參數 <code>arg</code> 中取得相同數值，所以說以下 <code>Cacher</code> 的測試就會失敗：</p>
@@ -712,7 +712,7 @@ To learn more, run the command again with --verbose.
 <p>閉包可以用三種方式獲取它們的環境，這剛好能對應到函式取得參數的三種方式：取得所有權、可變借用與不可變借用。這就被定義成以下三種 <code>Fn</code> 特徵：</p>
 <ul>
 <li><code>FnOnce</code> 會消耗周圍作用域中，也就是閉包的<em>環境</em>，所獲取變數。要消耗掉所獲取的變數，閉包必須取得這些變數的所有權並在定義時將它們移入閉包中。特徵名稱中的 <code>Once</code> 指的是因爲閉包無法取得相同變數的所有權一次以上，所以它只能被呼叫一次。</li>
-<li><code>FnMut</code> 可以改變環境，因爲它取得的事可變的借用數值。</li>
+<li><code>FnMut</code> 可以改變環境，因爲它取得的是可變的借用數值。</li>
 <li><code>Fn</code> 則取得環境中不可變的借用數值。</li>
 </ul>
 <p>當你建立閉包時，Rust 會依據閉包如何使用環境的數值來推導該使用何種特徵。所有的閉包都會實作 <code>FnOnce</code> 因爲它們都可以至少被呼叫一次。不會移動獲取變數的閉包還會實作 <code>FnMut</code>，最後不需要向獲取變數取得可變引用的閉包會再實作 <code>Fn</code>。在範例 13-12 中，<code>equal_to_x</code> 閉包會取得 <code>x</code> 的不可變借用（所以 <code>equal_to_x</code> 擁有 <code>Fn</code> 特徵），因爲閉包本體只會讀取 <code>x</code> 數值。</p>
@@ -724,7 +724,7 @@ To learn more, run the command again with --verbose.
 
     let equal_to_x = move |z| z == x;
 
-    println!(&quot;can't use x here: {:?}&quot;, x);
+    println!(&quot;無法在此使用 x：{:?}&quot;, x);
 
     let y = vec![1, 2, 3];
 
@@ -745,7 +745,7 @@ error[E0382]: borrow of moved value: `x`
   |                      |
   |                      value moved into closure here
 5 | 
-6 |     println!(&quot;can't use x here: {:?}&quot;, x);
+6 |     println!(&quot;無法在此使用 x：{:?}&quot;, x);
   |                                        ^ value borrowed here after move
 
 error: aborting due to previous error
