--- a/ch13-02-iterators.html
+++ b/ch13-02-iterators.html
@@ -169,7 +169,7 @@
                     <main>
                         <h2><a class="header" href="#使用疊代器來處理一系列的項目" id="使用疊代器來處理一系列的項目">使用疊代器來處理一系列的項目</a></h2>
 <p>疊代器（Iterator）模式讓你可以對 一個項目序列依序進行某些任務。一個疊代器負責遍歷序每個項目以及序列何時結束的邏輯。當你使用疊代器，你不需要自己實作這些邏輯。</p>
-<p>在 Rust 中疊代器是*惰性（lazy）*的，代表除非你呼叫方法來使用疊代器，不然它們不會有任何效果。舉例來說，範例 13-13 的程式碼會透過 <code>Vec&lt;T&gt;</code> 定義的方法 <code>iter</code> 從向量<code>v1</code> 建立一個疊代器來遍歷它的項目。此程式碼本身沒有啥實用之處。</p>
+<p>在 Rust 中疊代器是<em>惰性（lazy）</em> 的，代表除非你呼叫方法來使用疊代器，不然它們不會有任何效果。舉例來說，範例 13-13 的程式碼會透過 <code>Vec&lt;T&gt;</code> 定義的方法 <code>iter</code> 從向量<code>v1</code> 建立一個疊代器來遍歷它的項目。此程式碼本身沒有啥實用之處。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let v1 = vec![1, 2, 3];
 
@@ -185,7 +185,7 @@
     let v1_iter = v1.iter();
 
     for val in v1_iter {
-        println!(&quot;Got: {}&quot;, val);
+        println!(&quot;取得：{}&quot;, val);
     }
 <span class="boring">}
 </span></code></pre></pre>
@@ -315,15 +315,15 @@ mod tests {
         let shoes = vec![
             Shoe {
                 size: 10,
-                style: String::from(&quot;sneaker&quot;),
+                style: String::from(&quot;運動鞋&quot;),
             },
             Shoe {
                 size: 13,
-                style: String::from(&quot;sandal&quot;),
+                style: String::from(&quot;涼鞋&quot;),
             },
             Shoe {
                 size: 10,
-                style: String::from(&quot;boot&quot;),
+                style: String::from(&quot;靴子&quot;),
             },
         ];
 
@@ -334,11 +334,11 @@ mod tests {
             vec![
                 Shoe {
                     size: 10,
-                    style: String::from(&quot;sneaker&quot;)
+                    style: String::from(&quot;運動鞋&quot;)
                 },
                 Shoe {
                     size: 10,
-                    style: String::from(&quot;boot&quot;)
+                    style: String::from(&quot;靴子&quot;)
                 },
             ]
         );
@@ -504,7 +504,7 @@ fn main() {}
 </span><span class="boring">
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
-<p><span class="caption">範例 13-23：對我們的 <code>Counter</code> 疊代器使用特是特樣的 <code>Iterator</code> 特徵方法</span></p>
+<p><span class="caption">範例 13-23：對我們的 <code>Counter</code> 疊代器使用各式各樣的 <code>Iterator</code> 特徵方法</span></p>
 <p>注意到 <code>zip</code> 只會產生四個配對，理論上的 <code>(5, None)</code> 配對是不會產生出來的，因爲 <code>zip</code> 會在它的其中一個輸入疊代器回傳 <code>None</code> 時就回傳 <code>None</code>。</p>
 <p>這些所有呼叫都是可行的，因爲我們已經定義了 <code>next</code> 運作的行爲，而標準函式庫會提供其他呼叫 <code>next</code> 方法的預設實作。</p>
 <blockquote>
