--- a/print.html
+++ b/print.html
@@ -12442,7 +12442,7 @@ copy just the relevant lines below
 </ul>
 </blockquote>
 <h2><a class="header" href="#cargo-工作空間" id="cargo-工作空間">Cargo 工作空間</a></h2>
-<p>在第十二章中，我們建立的套件包含一個二進制執行檔 crate 與一個函式庫 crate。隨著專案開發，你可能會發現函式庫 crate 變得越來越大，而你可能會想要將套件拆成數個函式庫 crate。針對這種情形，Cargo 提供了一個功能叫做*工作空間（workspaces）*能來幫助管理並開發數個相關的套件。</p>
+<p>在第十二章中，我們建立的套件包含一個二進制執行檔 crate 與一個函式庫 crate。隨著專案開發，你可能會發現函式庫 crate 變得越來越大，而你可能會想要將套件拆成數個函式庫 crate。針對這種情形，Cargo 提供了一個功能叫做<em>工作空間（workspaces）</em> 能來幫助管理並開發數個相關的套件。</p>
 <h3><a class="header" href="#建立工作空間" id="建立工作空間">建立工作空間</a></h3>
 <p><em>工作空間</em>是一系列的共享相同 <em>Cargo.lock</em> 與輸出目錄的套件。讓我們建立個使用工作空間的專案，我們會使用簡單的程式碼，好讓我們能專注在工作空間的架構上。組織工作空間的架構有很多種方式，我們會顯示其中一種常見的方式。我們的工作空間將會包含一個二進制執行檔與兩個函式庫。執行檔會提供主要功能，並依賴其他兩個函式庫。其中一個函式庫會提供函式 <code>add_one</code>，而另一個函式庫會提供函式 <code>add_two</code>。這三個 crate 會包含在相同的工作空間中，我們先從建立工作空間的目錄開始：</p>
 <pre><code class="language-console">$ mkdir add
@@ -12533,7 +12533,7 @@ add-one = { path = &quot;../add-one&quot; }
 fn main() {
     let num = 10;
     println!(
-        &quot;Hello, world! {} plus one is {}!&quot;,
+        &quot;你好，世界！{} 加一會是 {}！&quot;,
         num,
         add_one::add_one(num)
     );
@@ -12560,7 +12560,7 @@ copy output below; the output updating script doesn't handle subdirectories in p
 <pre><code class="language-console">$ cargo run -p adder
     Finished dev [unoptimized + debuginfo] target(s) in 0.0s
      Running `target/debug/adder`
-Hello, world! 10 plus one is 11!
+你好，世界！10 加一會是 11！
 </code></pre>
 <p>這就會執行 <em>adder/src/main.rs</em> 的程式碼，其依賴於 <code>add-one</code> crate。</p>
 <h4><a class="header" href="#在工作空間中依賴外部套件" id="在工作空間中依賴外部套件">在工作空間中依賴外部套件</a></h4>
@@ -12689,9 +12689,9 @@ test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </ul>
 </blockquote>
 <h2><a class="header" href="#透過-cargo-install-從-cratesio-安裝二進制執行檔" id="透過-cargo-install-從-cratesio-安裝二進制執行檔">透過 <code>cargo install</code> 從 Crates.io 安裝二進制執行檔</a></h2>
-<p><code>cargo install</code> 命令讓你能本地安裝並使用二進制執行檔 crates。這並不是打算要取代系統套件，這是爲了方便讓 Rust 開發者可以安裝 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上分享的工具。注意你只能安裝有二進制目標的套件。*二進制目標（binary target）*是在 crate 有 <em>src/main.rs</em> 檔案或其他指定的二進制檔案時，所建立的可執行程式。而相反地，函式庫目標就無法單獨執行，因爲它提供給其他程式使用的函式庫。通常 crate 都會提供 <em>README</em> 檔案說明此 crate 是函式庫還是二進制目標，或者兩者都是。</p>
+<p><code>cargo install</code> 命令讓你能本地安裝並使用二進制執行檔 crates。這並不是打算要取代系統套件，這是爲了方便讓 Rust 開發者可以安裝 <a href="https://crates.io/">crates.io</a><!-- ignore --> 上分享的工具。注意你只能安裝有二進制目標的套件。<em>二進制目標（binary target）</em> 是在 crate 有 <em>src/main.rs</em> 檔案或其他指定的二進制檔案時，所建立的可執行程式。而相反地，函式庫目標就無法單獨執行，因爲它提供給其他程式使用的函式庫。通常 crate 都會提供 <em>README</em> 檔案說明此 crate 是函式庫還是二進制目標，或者兩者都是。</p>
 <p>所有透過 <code>cargo install</code> 安裝的二進制檔案都儲存在安裝根目錄的 <em>bin</em> 資料夾中。如果你是用 <em>rustup.rs</em>  安裝 Rust 且沒有任何自訂設置的話，此目錄會是 <em>$HOME/.cargo/bin</em>。請確定該目錄有在你的 <code>$PATH</code> 中，這樣才能夠執行 <code>cargo install</code> 安裝的程式。</p>
-<p>舉例來說，範例 12 我們提到有個 Rust 版本的 <code>grep</code> 工具叫做 <code>ripgrep</code> 能用來搜尋檔案。如果我們想要安裝 <code>ripgrep</code> 的話，我們可以執行以下命令：</p>
+<p>舉例來說，第十二章我們提到有個 Rust 版本的 <code>grep</code> 工具叫做 <code>ripgrep</code> 能用來搜尋檔案。如果我們想要安裝 <code>ripgrep</code> 的話，我們可以執行以下命令：</p>
 <!-- manual-regeneration
 cargo install something you don't have, copy relevant output below
 -->
